all page text chnages

--- a/project.html
+++ b/project.html
@@ -57,7 +57,6 @@
                         <a href="index.html" class="nav-item nav-link">Home</a>
                         <a href="about.html" class="nav-item nav-link">About</a>
                         <a href="service.html" class="nav-item nav-link">Service</a>
-                        <a href="project.html" class="nav-item nav-link active">Project</a>
                         <a href="contact.html" class="nav-item nav-link">Contact</a>
                     </div>
                     <a href="" class="btn rounded-pill py-2 px-4 ms-3 d-none d-lg-block">Get Started</a>
@@ -67,14 +66,12 @@
             <div class="container-xxll bg-primary hero-header">
                 <div class="container px-lg-5">
                     <div class="row g-5 align-items-end">
-                        <div class="col-lg-6 text-center text-lg-start">
+                        <div class="col-lg-12 text-center text-center" style="position: absolute;left: 0%;top: 28%;">
                             <h1 class="text-white mb-4 animated slideInDown">Project</h1>
-                            <p class="text-white pb-3 animated slideInDown">Tempor rebum no at dolore lorem clita rebum rebum ipsum rebum stet dolor sed justo kasd. Ut dolor sed magna dolor sea diam. Sit diam sit justo amet ipsum vero ipsum clita lorem</p>
+                            <p class="text-white pb-3 animated slideInDown">Tempor rebum no at dolore lorem clita rebum rebum ipsum rebum stet dolor sed justo kasd.<br> Ut dolor sed magna dolor sea diam. Sit diam sit justo amet ipsum vero ipsum clita lorem</p>
                             
                         </div>
-                        <div class="col-lg-6 text-center text-lg-start">
-                            <img class="img-fluid animated zoomIn" src="img/hero.png" alt="">
-                        </div>
+                        
                     </div>
                 </div>
             </div>
