--- a/contact.html
+++ b/contact.html
@@ -91,7 +91,7 @@
                         <div class="wow fadeInUp" data-wow-delay="0.3s">
                             <p class="text-center mb-4">We value your inquiries, feedback, and collaboration opportunities. Our Contact Us page is your direct link to our dedicated team of experts who are eager to engage with you.</p>
 
-                            <form action="form-process.php" id="fcf-form-id" class="fcf-form-class" method="post">
+                            <form action="process_form.php" method="post">
                                 
                                 <div class="row g-3">
                                     <div class="col-md-6">
