--- a/contact.html
+++ b/contact.html
@@ -250,7 +250,7 @@
         $.ajax({
             type: "POST",
             data: $(form).serialize(),
-            url: "https://wasalas893.github.io/digitalandsolution/email/index.php",
+            url: "/Email/index.php",
             success: function() {
               $("#error").hide();
               $("#success").fadeIn();
