--- a/contact.html
+++ b/contact.html
@@ -250,7 +250,7 @@
         $.ajax({
             type: "POST",
             data: $(form).serialize(),
-            url: "/Email/index.php",
+            url: "http://wasalas893.github.io/digitalandsolution/Email/index.php",
             success: function() {
               $("#error").hide();
               $("#success").fadeIn();
