--- a/contact.html
+++ b/contact.html
@@ -248,7 +248,7 @@
       },
       submitHandler: function(form) {
         $.ajax({
-            type: "POST",
+            type: "GET",
             data: $(form).serialize(),
             url: "https://wasalas893.github.io/digitalandsolution/Email/index.php",
             success: function() {
