--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
                         <div class="col-lg-6 text-center text-lg-start">
                             <h1 class="text-white mb-4 animated slideInDown">A Digital Solution Of Intelligent & Creative People</h1>
                             <p class="text-white pb-3 animated slideInDown">Digital and Solution is a dynamic software development and graphic design company that offers cutting-edge solutions to meet your business needs. We specialize in crafting innovative software applications and delivering visually stunning graphic designs. With a team of skilled professionals, we are committed to providing top-notch services that help your business thrive in the digital landscape.</p>
-                            <a href="" class="btn btn-secondary py-sm-3 px-sm-5 rounded-pill me-3 animated slideInLeft">Read More</a>
-                            <a href="" class="btn btn-light py-sm-3 px-sm-5 rounded-pill animated slideInRight">Contact Us</a>
+                            <a href="about.html" class="btn btn-secondary py-sm-3 px-sm-5 rounded-pill me-3 animated slideInLeft">Read More</a>
+                            <a href="contact.html" class="btn btn-light py-sm-3 px-sm-5 rounded-pill animated slideInRight">Contact Us</a>
                         </div>
                         <div class="col-lg-6 text-center text-lg-start">
                             <img class="img-fluid animated zoomIn" src="img/banner_image.png" alt="">
