--- a/about.html
+++ b/about.html
@@ -56,6 +56,7 @@
                         <a href="index.html" class="nav-item nav-link">Home</a>
                         <a href="about.html" class="nav-item nav-link active">About</a>
                         <a href="service.html" class="nav-item nav-link">Service</a>
+                        <a href="project.html" class="nav-item nav-link">Project</a>
                         <a href="contact.html" class="nav-item nav-link">Contact</a>
                     </div>
                     <a href="contact.html" class="btn rounded-pill py-2 px-4 ms-3 d-none d-lg-block">Get Started</a>
