--- a/service.html
+++ b/service.html
@@ -57,6 +57,7 @@
                         <a href="index.html" class="nav-item nav-link">Home</a>
                         <a href="about.html" class="nav-item nav-link">About</a>
                         <a href="service.html" class="nav-item nav-link active">Service</a>
+                        <a href="project.html" class="nav-item nav-link">Project</a>
                         <a href="contact.html  " class="nav-item nav-link">Contact</a>
                     </div>
                     <a href="contact.html" class="btn rounded-pill py-2 px-4 ms-3 d-none d-lg-block">Get Started</a>
